Revert "Change .gitignore to exclude .metadata"
This reverts commit 2242edb6062b19eaa16aa9762379e5f62b9d9d8d.

--- a/Soccer/.gitignore
+++ b/Soccer/.gitignore
@@ -17,10 +17,10 @@
 local.properties
 
 # Eclipse project files
-/.metadata
 .classpath
 project.properties
 .project
+.metadata*
 .settings
 hs_err*
 
