--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 *.class
 
 # generated files
-/bin
-/gen
-/libs
+Soccer/bin
+Soccer/gen
+Soccer/libs
 
 # Local configuration file (sdk path, etc)
 local.properties
