--- a/Soccer/AndroidManifest.xml
+++ b/Soccer/AndroidManifest.xml
@@ -7,28 +7,38 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.VIBRATE" android:maxSdkVersion="19"/>
+
+    <uses-permission
+        android:name="android.permission.VIBRATE"
+        android:maxSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <activity
+            android:name="com.soccer.main.Splash"
+            android:label="@string/title_activity_splash"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
         <activity
             android:name="com.soccer.main.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        
         <activity
             android:name="com.soccer.main.NewGameOptions"
             android:label="@string/title_activity_new_game_options"
-            android:screenOrientation="landscape"
-            android:parentActivityName="com.soccer.main.MainActivity" >
+            android:parentActivityName="com.soccer.main.MainActivity"
+            android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.soccer.main.MainActivity" />
